[ColumnView] Don't leak SeparatorItems

Any children from a created component must have either QML ownership or
a parent or manual destruction. Another code path in ColumnView can
delete separators at runtime so a parent is used.

BUG: 453201